--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,90 @@
-.calendar{
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6a7b6c;
+  color: #fff;
+  padding: 2px 20px;
+}
+
+.navbar .link {
+  flex-grow: 1;
+}
+
+.navigation {
+  display: flex;
   width: 100%;
-  height: 100%;
-  flex-direction: column;
+}
+
+.link {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  font:  1.2rem/1.5rem "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.link:hover {
+  background-color: #5f6d61;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #26452d; 
+}
+
+.header_title {
+  font-size: 24px;
+  font-weight: 600;
+  width: 100%;
+  font: bold 1.8rem/1.5rem "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.header_github {
+  color: #FFFFFF; /* White icon color */
+  font-size: 24px; /* Adjust icon size */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  transition: color 0.3s ease-in-out; /* Smooth transition for hover effect */
+}
+
+.header_github:hover {
+  color: #9F7AEA; /* Light purple color on hover */
+}
+
+/* Ensures the icon inherits the anchor tag's color */
+.header_github svg {
+  fill: currentColor;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b1cbbb;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 500px;
+  width: 100%;
 }
